--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "react-date-picker": "^8.0.0",
     "react-datepicker": "^2.14.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-image": "^2.4.0",
+    "react-image-appear": "^1.2.23",
+    "react-loader-spinner": "^3.1.14",
+    "react-scripts": "3.4.1",
+    "react-visibility-sensor": "^5.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
