--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
+    "bootstrap": "^4.4.1",
     "moment": "^2.24.0",
     "react": "^16.13.1",
     "react-date-picker": "^8.0.0",
     "react-datepicker": "^2.14.1",
     "react-dom": "^16.13.1",
+    "react-fade-in": "^1.0.0",
     "react-image": "^2.4.0",
     "react-image-appear": "^1.2.23",
     "react-loader-spinner": "^3.1.14",
+    "react-loading": "^2.0.3",
+    "react-lottie": "^1.2.3",
     "react-scripts": "3.4.1",
     "react-visibility-sensor": "^5.1.1"
   },
